--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
         "livewire/volt": "^1.7",
+        "predis/predis": "^3.2",
         "robsontenorio/mary": "^2.4",
         "yajra/laravel-address": "^12.2"
     },
