--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "livewire/volt": "^1.7",
         "predis/predis": "^3.2",
         "robsontenorio/mary": "^2.4",
+        "symfony/http-client": "^7.3",
+        "symfony/mailgun-mailer": "^7.3",
         "yajra/laravel-address": "^12.2"
     },
     "require-dev": {
